src/core-crm/objects/Marketing_Interaction__c/Marketing_Interaction__c.object-meta.xml
<CustomObject>
    <label>Marketing Interaction</label>
    <nameField>
        <displayFormat>MI - {000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>