src/core-crm/objects/Marketing_Interaction__c/fields/Country_Joining_From__c.field-meta.xml
<CustomField>
    <fullName>Country_Joining_From__c</fullName>
    <label>Country Joining From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>