src/core-crm/objects/Marketing_Interaction__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <description>The discount applied to the course/event fee amount.</description>
    <label>Discount Amount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>