src/core-crm/objects/Marketing_Interaction__c/fields/EDM_Last_Opened_DateTime__c.field-meta.xml
<CustomField>
    <fullName>EDM_Last_Opened_DateTime__c</fullName>
    <description>Migration Only</description>
    <label>EDM Last Opened DateTime</label>
    <type>DateTime</type>
</CustomField>