src/core-crm/objects/Marketing_Interaction__c/fields/Enquiry_Description__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Description__c</fullName>
    <description>Description of the enquiry</description>
    <label>Enquiry Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>