src/core-crm/objects/Marketing_Interaction__c/fields/Event_Agency_Host__c.field-meta.xml
<CustomField>
    <fullName>Event_Agency_Host__c</fullName>
    <description>The name of the Agency hosting an event.</description>
    <label>Event Agency Host</label>
    <length>80</length>
    <type>Text</type>
</CustomField>