src/core-crm/objects/Marketing_Interaction__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>The name of the event.</description>
    <label>Event Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>