src/core-crm/objects/Marketing_Interaction__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>The type of event.</description>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Day</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Information Session</fullName>
            </value>
            <value>
                <fullName>Virtual Fair/Expo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>