src/core-crm/objects/Marketing_Interaction__c/fields/Has_Attended__c.field-meta.xml
<CustomField>
    <fullName>Has_Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the person did actually attend the course/event that they registered for.</description>
    <label>Has Attended</label>
    <type>Checkbox</type>
</CustomField>