src/core-crm/objects/Marketing_Interaction__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Marketing Interactions</relationshipLabel>
    <relationshipName>Marketing_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>