src/core-crm/objects/Marketing_Interaction__c/fields/Lead_Score_Reset__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Score Reset</label>
    <type>Checkbox</type>
</CustomField>