src/core-crm/objects/Marketing_Interaction__c/fields/Marketing_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Segmentation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Segmentation</label>
    <referenceTo>Marketing_Segmentation__c</referenceTo>
    <relationshipLabel>Marketing Interactions</relationshipLabel>
    <relationshipName>Marketing_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>