src/core-crm/objects/Marketing_Interaction__c/fields/Match_My_Skill_Completion__c.field-meta.xml
<CustomField>
    <fullName>Match_My_Skill_Completion__c</fullName>
    <label>Match My Skill Completion</label>
    <length>80</length>
    <type>Text</type>
</CustomField>