src/core-crm/objects/Marketing_Interaction__c/fields/MMS_Process_State__c.field-meta.xml
<CustomField>
    <fullName>MMS_Process_State__c</fullName>
    <label>MMS Process State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>