src/core-crm/objects/Marketing_Interaction__c/fields/Page_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Display_Name__c</fullName>
    <description>Lead Form Name. Typically taken from website metadata.</description>
    <label>Page Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>