src/core-crm/objects/Marketing_Interaction__c/fields/Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Page_URL__c</fullName>
    <description>The URL for the Web Page.</description>
    <label>Page URL</label>
    <type>Url</type>
</CustomField>