src/core-crm/objects/Marketing_Interaction__c/fields/QUT_Sloan_MIT_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>QUT_Sloan_MIT_Affiliation__c</fullName>
    <description>Identifies if the marketing person is associated with QUT/Sloan MIT. Note: this is specifically captured (and only captured) as part of the QUTeX Zoom data file. Example values in the file are: Partner, Student, Industry.</description>
    <label>QUT Sloan MIT Affiliation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>