src/core-crm/objects/Marketing_Interaction__c/fields/QUT_Staff_Name__c.field-meta.xml
<CustomField>
    <fullName>QUT_Staff_Name__c</fullName>
    <description>The name of the QUT recruitment staff member who met with this marketing person.</description>
    <label>QUT Staff Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>