src/core-crm/objects/Marketing_Interaction__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>