src/core-crm/objects/Marketing_Interaction__c/fields/UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>UTM_Content__c</fullName>
    <description>This parameter allows you to track different ads within a campaign.</description>
    <label>UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>