src/core-crm/objects/Marketing_Interaction__c/fields/UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>UTM_Medium__c</fullName>
    <description>This tracks the type of channel driving the traffic: organic social, paid social, email, and so on.</description>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>