src/core-crm/objects/Marketing_Interaction__c/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <description>Google parameter for passing referring source. By default Google AdWords provides &quot;google.com&quot; as the UTM_Source.</description>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>