src/core-crm/objects/Marketing_Interaction__c/fields/UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term__c</fullName>
    <description>Use this UTM tag to track paid keywords or key phrases.</description>
    <label>UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>